// Vitest Snapshot v1

exports[`shoud merge duplicate templates 1`] = `
"import { $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<div></div>\\"],
  $$_templ_2 = /* #__PURE__ */ $$_templ,
  $$_templ_3 = /* #__PURE__ */ [\\"<div>Foo</div>\\"],
  $$_templ_4 = /* #__PURE__ */ $$_templ_3,
  $$_templ_5 = /* #__PURE__ */ [\\"<div>Bar</div>\\"],
  $$_templ_6 = /* #__PURE__ */ [\\"<span></span>\\"],
  $$_templ_7 = /* #__PURE__ */ [\\"<span>Foo</span>\\"],
  $$_templ_8 = /* #__PURE__ */ $$_templ_7,
  $$_templ_9 = /* #__PURE__ */ $$_templ_7,
  $$_templ_10 = /* #__PURE__ */ [\\"<span>Bar</span>\\"];

$$_ssr($$_templ)
$$_ssr($$_templ_2)
$$_ssr($$_templ_3)
$$_ssr($$_templ_4)
$$_ssr($$_templ_5)
$$_ssr($$_templ_6)
$$_ssr($$_templ_7)
$$_ssr($$_templ_8)
$$_ssr($$_templ_9)
$$_ssr($$_templ_10)
"
`;

exports[`should _not_ compile $on expression 1`] = `
"import { $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div></div>\\"];
$$_ssr($$_templ)"
`;

exports[`should _not_ compile $oncapture expression 1`] = `
"import { $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div></div>\\"];
$$_ssr($$_templ)"
`;

exports[`should _not_ compile $prop expression 1`] = `
"import { $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div></div>\\"];
$$_ssr($$_templ)"
`;

exports[`should _not_ compile $ref expression 1`] = `
"import { $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div></div>\\"];
$$_ssr($$_templ)"
`;

exports[`should _not_ compile $use expression 1`] = `
"import { $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div></div>\\"];
$$_ssr($$_templ)"
`;

exports[`should _not_ compile innerHTML expression 1`] = `
"import { $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div></div>\\"];
$$_ssr($$_templ)"
`;

exports[`should compile $class expression 1`] = `
"import { $$_classes, $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div\\", \\"></div>\\"];
$$_ssr($$_templ, $$_classes(\\"\\", { \\"foo\\": true }))"
`;

exports[`should compile $cssvar expression 1`] = `
"import { $$_styles, $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<div\\", \\"></div>\\"];
$$_ssr($$_templ, $$_styles(\\"\\", { \\"--foo\\": 10 }))"
`;

exports[`should compile $style expression 1`] = `
"import { $$_styles, $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<div\\", \\"></div>\\"];
$$_ssr($$_templ, $$_styles(\\"\\", { \\"foo\\": \\"bar\\" }))"
`;

exports[`should compile child expression 1`] = `
"import { $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<div><!$>\\", \\"</div>\\"];
$$_ssr($$_templ, id)"
`;

exports[`should compile conditional element expression  1`] = `
"import { $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<div id=\\\\\\"b\\\\\\"></div>\\"],
  $$_templ_2 = /* #__PURE__ */ [\\"<div id=\\\\\\"a\\\\\\"><!$>\\", \\"</div>\\"];
$$_ssr($$_templ_2, id > 10 && $$_ssr($$_templ))"
`;

exports[`should compile dynamic $cssvar expression 1`] = `
"import { $$_styles, $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div\\", \\"></div>\\"];
$$_ssr($$_templ, $$_styles(\\"\\", { \\"--foo\\": id }))"
`;

exports[`should compile dynamic $style expression 1`] = `
"import { $$_styles, $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div\\", \\"></div>\\"];
$$_ssr($$_templ, $$_styles(\\"\\", { \\"foo\\": id }))"
`;

exports[`should compile dynamic attribute 1`] = `
"import { $$_attr, $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div\\", \\"></div>\\"];
$$_ssr($$_templ, $$_attr(\\"foo\\", id))"
`;

exports[`should compile dynamic class attribute 1`] = `
"import { $$_classes, $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div\\", \\"></div>\\"];
$$_ssr($$_templ, $$_classes(id))"
`;

exports[`should compile dynamic style attribute 1`] = `
"import { $$_styles, $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div\\", \\"></div>\\"];
$$_ssr($$_templ, $$_styles(id))"
`;

exports[`should compile fragment 1`] = `
"import { $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<div id=\\\\\\"a\\\\\\"></div><div id=\\\\\\"b\\\\\\"></div>\\"];
$$_ssr($$_templ)"
`;

exports[`should compile multiple $class expressions 1`] = `
"import { $$_classes, $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div\\", \\"></div>\\"];
$$_ssr($$_templ, $$_classes(\\"foo bar\\", { \\"foo\\": true, \\"bar\\": false, \\"baz\\": true }))"
`;

exports[`should compile multiple JSX nodes 1`] = `
"import { $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<div><span id=\\\\\\"a\\\\\\"></span><span id=\\\\\\"b\\\\\\"></span></div>\\"];
$$_ssr($$_templ)"
`;

exports[`should compile nested fragment 1`] = `
"import { $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<div id=\\\\\\"root\\\\\\"><div id=\\\\\\"a\\\\\\"></div><div id=\\\\\\"b\\\\\\"></div></div>\\"];
$$_ssr($$_templ)"
`;

exports[`should compile observable $class expression 1`] = `
"import { $$_classes, $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div\\", \\"></div>\\"];
$$_ssr($$_templ, $$_classes(\\"\\", { \\"foo\\": id }))"
`;

exports[`should compile observable $cssvar expression 1`] = `
"import { $$_styles, $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div\\", \\"></div>\\"];
$$_ssr($$_templ, $$_styles(\\"\\", { \\"--foo-bar\\": id }))"
`;

exports[`should compile observable $style expression 1`] = `
"import { $$_styles, $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div\\", \\"></div>\\"];
$$_ssr($$_templ, $$_styles(id, { \\"foo\\": id }))"
`;

exports[`should compile observable attribute 1`] = `
"import { $$_attr, $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div\\", \\"></div>\\"];
$$_ssr($$_templ, $$_attr(\\"foo\\", id))"
`;

exports[`should compile observable child expression 1`] = `
"import { $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<div><!$>\\", \\"</div>\\"];
$$_ssr($$_templ, () => id() + 10)"
`;

exports[`should compile observable conditional element expression  1`] = `
"import { $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div id=\\\\\\"b\\\\\\"></div>\\"],
  $$_templ_2 = /* #__PURE__ */ [\\"<div id=\\\\\\"a\\\\\\"><!$>\\", \\"</div>\\"];
$$_ssr($$_templ_2, () => id() > 10 && $$_ssr($$_templ))"
`;

exports[`should compile shorthand boolean attribute 1`] = `
"import { $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<button disabled=\\\\\\"\\\\\\"></button>\\"];
$$_ssr($$_templ)"
`;

exports[`should compile single JSX node 1`] = `
"import { $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<div></div>\\"];
$$_ssr($$_templ)"
`;

exports[`should compile single self-closing JSX node 1`] = `
"import { $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<div></div>\\"];
$$_ssr($$_templ)"
`;

exports[`should compile spread with attributes 1`] = `
"import { $$_spread, $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div\\", \\"></div>\\"];
$$_ssr($$_templ, $$_spread([{ \\"a\\": \\"0\\", \\"b\\": \\"1\\", \\"c\\": id }, props, { \\"d\\": true, \\"e\\": 10 }, propsTwo]))"
`;

exports[`should compile static attribute (boolean) 1`] = `
"import { $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<div foo=\\\\\\"true\\\\\\" bar=\\\\\\"false\\\\\\"></div>\\"];
$$_ssr($$_templ)"
`;

exports[`should compile static attribute (number) 1`] = `
"import { $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<div foo=\\\\\\"10\\\\\\"></div>\\"];
$$_ssr($$_templ)"
`;

exports[`should compile static attribute (template string) 1`] = `
"import { $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<div foo=\\\\\\"bar-baz\\\\\\"></div>\\"];
$$_ssr($$_templ)"
`;

exports[`should compile static attributes 1`] = `
"import { $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<div class=\\\\\\"foo bar\\\\\\" style=\\\\\\"baz daz\\\\\\"></div>\\"];
$$_ssr($$_templ)"
`;

exports[`should compile static class attribute 1`] = `
"import { $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<div class=\\\\\\"foo bar\\\\\\"></div>\\"];
$$_ssr($$_templ)"
`;

exports[`should compile static style attribute 1`] = `
"import { $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<div style=\\\\\\"foo: 1; bar: 2\\\\\\"></div>\\"];
$$_ssr($$_templ)"
`;

exports[`should group multiple static $cssvar expressions 1`] = `
"import { $$_styles, $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div\\", \\"></div>\\"];
$$_ssr($$_templ, $$_styles(\\"pre: 10\\", { \\"--foo\\": 10, \\"--bar\\": \\"align-content\\", \\"--baz\\": id }))"
`;

exports[`should group multiple static $style and $cssvar expressions 1`] = `
"import { $$_styles, $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<div\\", \\"></div>\\"];
$$_ssr($$_templ, $$_styles(\\"pre: 10\\", { \\"baz\\": \`content\`, \\"boo\\": 20, \\"--foo\\": 10, \\"--bar\\": \\"align-content\\" }))"
`;

exports[`should group multiple static $style expressions 1`] = `
"import { $$_styles, $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div\\", \\"></div>\\"];
$$_ssr($$_templ, $$_styles(\\"foo: a;\\", { \\"foo\\": \\"b\\", \\"bar\\": true, \\"baz\\": id }))"
`;

exports[`should merge classes after spread 1`] = `
"import { $$_spread, $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div\\", \\"></div>\\"];
$$_ssr($$_templ, $$_spread([props, { \\"class\\": \\"foo bar\\", \\"$$class\\": { \\"a\\": id, \\"b\\": false } }]))"
`;

exports[`should merge classes between spreads 1`] = `
"import { $$_spread, $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div\\", \\"></div>\\"];
$$_ssr(
  $$_templ,
  $$_spread([{ \\"class\\": \\"foo bar\\", \\"$$class\\": { \\"a\\": id, \\"b\\": false } }, props, { \\"$$class\\": { \\"c\\": 0 } }, propsTwo]),
)"
`;

exports[`should merge spreads 1`] = `
"import { $$_spread, $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div\\", \\"></div>\\"];
$$_ssr($$_templ, $$_spread([props, propsTwo, propsThree]))"
`;

exports[`should merge styles after spread 1`] = `
"import { $$_spread, $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div\\", \\"></div>\\"];
$$_ssr($$_templ, $$_spread([props, { \\"style\\": \\"foo bar\\", \\"$$style\\": { \\"a\\": id, \\"b\\": false, \\"c\\": 0 } }]))"
`;

exports[`should merge styles between spreads 1`] = `
"import { $$_spread, $$_ssr } from \\"maverick.js/ssr\\";

const $$_templ = /* #__PURE__ */ [\\"<!$><div\\", \\"></div>\\"];
$$_ssr(
  $$_templ,
  $$_spread([{ \\"style\\": \\"foo bar\\", \\"$$style\\": { \\"a\\": id, \\"b\\": false } }, props, { \\"$$style\\": { \\"c\\": 0 } }, propsTwo]),
)"
`;
